--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Nelly's page</title>
-		 <link rel="stylesheet" type="text/css" href="style_hw3.css">
+		 <link rel="stylesheet" type="text/css" href="indexstyle.css">
 	</head>
 	<body>
 		<p></p>
